fix: mobile overflow

--- a/components/navbar.scss
+++ b/components/navbar.scss
@@ -11,7 +11,7 @@
 
 	.wrapper {
 		display: flex;
-		max-width: 1040px;
+		max-width: var(--container);
 		height: 4rem;
 		flex: 1;
 		align-items: center;
