--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,7 @@
 	--text: #000;
 	--background: #fff;
 	--background-rgb: 255, 255, 255;
+	--container: 1040px;
 }
 
 @media (prefers-color-scheme: dark) {
